improved processing of prompt file caches to remove old unused prompts after some number of processing